--- a/Drag_Static_Site/Shared/NavMenu.razor
+++ b/Drag_Static_Site/Shared/NavMenu.razor
@@ -1,31 +1,9 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">Drag_Static_Site</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>
-</div>
-
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
-    </nav>
-</div>
+﻿<MudNavMenu>
+    <MudText Typo="Typo.h6" Class="px-4">Drag_Static_Blog</MudText>
+    <MudText Typo="Typo.body1" Class="px-4 mud-text-secondary">A Blazor WASM Blog</MudText>
+    <MudDivider Class="my-2" />
+    <MudNavLink Icon="@Icons.Material.Filled.Home" Href="/" >Index</MudNavLink>
+</MudNavMenu>
 
 @code {
     private bool collapseNavMenu = true;
