--- a/Drag_Static_Site/Shared/NavMenu.razor
+++ b/Drag_Static_Site/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<MudNavMenu>
-    <MudText Typo="Typo.h6" Class="px-4">Drag_Static_Blog</MudText>
+    <MudText Typo="Typo.h6" Class="px-4">golB s'ralingarD</MudText>
     <MudText Typo="Typo.body1" Class="px-4 mud-text-secondary">A Blazor WASM Blog</MudText>
     <MudDivider Class="my-2" />
     <MudNavLink Icon="@Icons.Material.Filled.Home" Href="/" >Index</MudNavLink>
