--- a/Drag_Static_Site/Shared/MainLayout.razor
+++ b/Drag_Static_Site/Shared/MainLayout.razor
@@ -1,7 +1,7 @@
 ﻿@using Drag_Static_Site.Constants
 @inherits LayoutComponentBase
 @inject ILocalStorageService LocalStorage
-<MudThemeProvider />
+<MudThemeProvider IsDarkMode="true" />
 <MudDialogProvider />
 <MudSnackbarProvider />
 <MudLayout>
