--- a/Drag_Static_Site/Pages/Index.razor
+++ b/Drag_Static_Site/Pages/Index.razor
@@ -16,12 +16,14 @@ else
         <MudItem xs="10">
             <br/>
             <MudPaper Elevation="6">
-                <MudText Typo="Typo.h3" Align="Align.Left">You're Currently Reading: @CurrentPost.PostName</MudText>
+                <MudText Typo="Typo.h3" Align="Align.Left">@CurrentPost.PostName</MudText>
                 <br/>
                 <MudText Typo="Typo.h5" Align="Align.Right">Published / Last Updated: @CurrentPost.PublishedDateTime</MudText>
             </MudPaper>
             <br/>
             <MudMarkdown Value="@CurrentMarkDown"></MudMarkdown>
+            <br/>
+            <br/>
             <MudPaper Elevation="3">
                 <MudFab OnClick="GoPrevious" StartIcon="@Icons.Material.Filled.ArrowLeft" Label="Previous Post" Color="Color.Primary"/>
                 <MudFab OnClick="GoNext" EndIcon="@Icons.Material.Filled.ArrowRight" Label="Next post" Color="Color.Success" />
