--- a/Drag_Static_Site/Pages/Index.razor
+++ b/Drag_Static_Site/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
+@page "/blog"
 @using Drag_Static_Site.Models
 @using Drag_Static_Site.Services
-@using Markdig
 @inject HttpClient HttpClient
 @inject PostService PostService
 
