--- a/Drag_Static_Site/Shared/NavMenu.razor
+++ b/Drag_Static_Site/Shared/NavMenu.razor
@@ -2,8 +2,8 @@
     <MudText Typo="Typo.h6" Class="px-4">golB s'ralingarD</MudText>
     <MudText Typo="Typo.body1" Class="px-4 mud-text-secondary">A Blazor WASM Blog</MudText>
     <MudDivider Class="my-2" />
-    <MudNavLink Icon="@Icons.Material.Filled.Home" Href="/" >Posts</MudNavLink>
-    <MudNavLink Icon="@Icons.Material.Filled.Info" Href="/About">About Site</MudNavLink>
+    <MudNavLink Icon="@Icons.Material.Filled.Home" Href="/blog" >Posts</MudNavLink>
+    <MudNavLink Icon="@Icons.Material.Filled.Info" Href="/about">About Site</MudNavLink>
 </MudNavMenu>
 
 @code {
