--- a/Drag_Static_Site/Shared/NavMenu.razor
+++ b/Drag_Static_Site/Shared/NavMenu.razor
@@ -3,7 +3,7 @@
     <MudText Typo="Typo.body1" Class="px-4 mud-text-secondary">A Blazor WASM Blog</MudText>
     <MudDivider Class="my-2" />
     <MudNavLink Icon="@Icons.Material.Filled.Home" Href="blog" >Posts</MudNavLink>
-    <MudNavLink Icon="@Icons.Material.Filled.Grid4x4" Href="grid" >Obligatory Grid</MudNavLink>
+    <MudNavLink Icon="@Icons.Material.Filled.Grid4x4" Href="grid" >Customizable Grid</MudNavLink>
     <MudNavLink Icon="@Icons.Material.Filled.Info" Href="about">About Site</MudNavLink>
 </MudNavMenu>
 
