Added "Click Me"

--- a/Drag_Static_Site/Shared/NavMenu.razor
+++ b/Drag_Static_Site/Shared/NavMenu.razor
@@ -4,6 +4,7 @@
     <MudDivider Class="my-2" />
     <MudNavLink Icon="@Icons.Material.Filled.Home" Href="blog" >Posts</MudNavLink>
     <MudNavLink Icon="@Icons.Material.Filled.Grid4x4" Href="grid" >Customizable Grid</MudNavLink>
+    <MudNavLink Icon="@Icons.Material.Filled.AdsClick" Href="clickMe" >Click</MudNavLink>
     <MudNavLink Icon="@Icons.Material.Filled.Info" Href="about">About Site</MudNavLink>
 </MudNavMenu>
 
